--- a/app/src/main/res/layout/title_item.xml
+++ b/app/src/main/res/layout/title_item.xml
@@ -3,20 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     android:background="@android:color/white"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
     <TextView
+        android:textColor="@android:color/background_dark"
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_height="56dp"
+        android:padding="16dp"
         tools:text="some text" />
 
     <ImageView
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:padding="16dp"
         android:src="@drawable/ic_arrow" />
 </LinearLayout>
